--- a/gazettes-page.html
+++ b/gazettes-page.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html data-wf-page="6099966d2e7a2c1aad697d4c" data-wf-site="6099966d2e7a2cc80c697d45">
+<html data-wf-page="6099996d4fc3ce2968cf766c" data-wf-site="6099966d2e7a2cc80c697d45">
 <head>
   <meta charset="utf-8">
-  <title>Minimal Responsive Website Template | Webflow Templates</title>
+  <title>Gazettes Page</title>
+  <meta content="Gazettes Page" property="og:title">
+  <meta content="Gazettes Page" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="normalize.css" rel="stylesheet" type="text/css">
   <link href="web.css" rel="stylesheet" type="text/css">
@@ -19,10 +21,10 @@
     <div class="w-container">
       <a href="#" class="w-nav-brand"><img src="images/logo-name.svg" loading="lazy" alt="" class="nav-logo"></a>
       <nav role="navigation" class="nav-menu-2 w-nav-menu">
-        <a href="index.html" aria-current="page" class="main-nav-link w-nav-link w--current">Home</a>
+        <a href="index.html" class="main-nav-link w-nav-link">Home</a>
         <a href="project-page.html" class="main-nav-link w-nav-link">Projects</a>
         <a href="team-page.html" class="main-nav-link w-nav-link">Team</a>
-        <a href="gazettes-page.html" class="main-nav-link w-nav-link">Gazettes</a>
+        <a href="gazettes-page.html" aria-current="page" class="main-nav-link w-nav-link w--current">Gazettes</a>
         <a href="photo-gallery-page.html" class="main-nav-link w-nav-link">Photo Gallery</a>
       </nav>
       <div class="w-nav-button">
@@ -30,21 +32,37 @@
       </div>
     </div>
   </div>
-  <div class="hero-layout">
-    <div id="w-node-_28133bad-0a68-4e54-d2d9-c7335bb7089f-ad697d4c" class="header-secondary">
-      <h1 class="main-heading">Welcome to the Evergreen Branch!</h1>
-      <div class="w-container">
-        <div class="divider"></div>
-        <div class="heading-block">
-          <h6 class="heading">Slack: #evergree || Wiki: https://willowtree.atlassian.net/wiki/spaces/evergreen/overview || Other Stuff: Something Cool</h6>
+  <div class="section grid-bounce">
+    <div class="container main w-container">
+      <div>
+        <h2>Gazettes</h2>
+        <div class="divider grey"></div>
+        <div class="column-grow w-row">
+          <div class="vertical-main w-col w-col-3">
+            <div class="project-wrapper">
+              <h3>August 2020</h3><img src="images/2020-M8-August-Gazette.png" loading="lazy" sizes="(max-width: 479px) 31vw, (max-width: 767px) 21vw, (max-width: 991px) 167px, 220px" srcset="images/2020-M8-August-Gazette-p-500.png 500w, images/2020-M8-August-Gazette.png 816w" alt="">
+            </div>
+            <div class="project-wrapper"></div>
+          </div>
+          <div class="vertical-main w-col w-col-3">
+            <div class="project-wrapper">
+              <h3>July 2020</h3><img src="images/2020-M7-July-Gazette.png" loading="lazy" sizes="(max-width: 479px) 31vw, (max-width: 767px) 21vw, (max-width: 991px) 167px, 220px" srcset="images/2020-M7-July-Gazette-p-500.png 500w, images/2020-M7-July-Gazette.png 816w" alt="">
+            </div>
+            <div class="project-wrapper"></div>
+          </div>
+          <div class="vertical-main w-col w-col-3">
+            <div class="project-wrapper">
+              <h3>June 2020</h3><img src="images/2020-M6-June-Gazette.png" loading="lazy" sizes="(max-width: 479px) 31vw, (max-width: 767px) 21vw, (max-width: 991px) 167px, 220px" srcset="images/2020-M6-June-Gazette-p-500.png 500w, images/2020-M6-June-Gazette.png 816w" alt="">
+            </div>
+            <div class="project-wrapper"></div>
+          </div>
+          <div class="vertical-main aside w-col w-col-3">
+            <div class="project-wrapper article"></div>
+            <div class="project-wrapper article"></div>
+          </div>
         </div>
       </div>
     </div>
-    <div id="w-node-_28133bad-0a68-4e54-d2d9-c7335bb708a3-ad697d4c"></div>
-    <div id="w-node-_28133bad-0a68-4e54-d2d9-c7335bb708a4-ad697d4c" class="grid-block"></div>
-    <div id="w-node-_28133bad-0a68-4e54-d2d9-c7335bb708a5-ad697d4c" class="grid-block"></div>
-    <div id="w-node-_28133bad-0a68-4e54-d2d9-c7335bb708a6-ad697d4c" class="grid-block"></div>
-    <div id="w-node-_28133bad-0a68-4e54-d2d9-c7335bb708a7-ad697d4c" class="grid-block"></div>
   </div>
   <div class="footer-section">
     <div class="footer-block">
