--- a/sample-page.html
+++ b/sample-page.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html data-wf-page="609c27977e7d9b5fe036c02a" data-wf-site="6099966d2e7a2cc80c697d45">
+<html data-wf-page="609d452476bc2ffc26b409d5" data-wf-site="6099966d2e7a2cc80c697d45">
 <head>
   <meta charset="utf-8">
-  <title>Nav Template Page</title>
-  <meta content="Nav Template Page" property="og:title">
-  <meta content="Nav Template Page" property="twitter:title">
+  <title>Sample Page</title>
+  <meta content="Sample Page" property="og:title">
+  <meta content="Sample Page" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="normalize.css" rel="stylesheet" type="text/css">
   <link href="web.css" rel="stylesheet" type="text/css">
@@ -16,11 +16,11 @@
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
-<body>
+<body class="body">
   <div data-collapse="small" data-animation="default" data-duration="400" role="banner" class="main-nav-bar w-nav">
     <div class="w-container">
       <a href="#" class="w-nav-brand"><img src="images/logo-name.svg" loading="lazy" alt="" class="nav-logo"></a>
-      <nav role="navigation" class="w-nav-menu">
+      <nav role="navigation" class="nav-menu-2 w-nav-menu">
         <a href="index.html" class="main-nav-link w-nav-link">Home</a>
         <a href="project-page.html" class="main-nav-link w-nav-link">Projects</a>
         <a href="team-page.html" class="main-nav-link w-nav-link">Team</a>
@@ -32,15 +32,36 @@
       </div>
     </div>
   </div>
-  <div>
+  <div class="section">
     <div class="w-container">
-      <div class="w-richtext">
-        <h2>What’s a Rich Text element?</h2>
-        <p>The rich text element allows you to create and format headings, paragraphs, blockquotes, images, and video all in one place instead of having to add and format them individually. Just double-click and easily create content.</p>
-        <h4>Static and dynamic content editing</h4>
-        <p>A rich text element can be used with static or dynamic content. For static content, just drop it into any page and begin editing. For dynamic content, add a rich text field to any collection and then connect a rich text element to that field in the settings panel. Voila!</p>
-        <h4>How to customize formatting for each rich text</h4>
-        <p>Headings, paragraphs, blockquotes, figures, images, and figure captions can all be styled after a class is added to the rich text element using the &quot;When inside of&quot; nested selector system.</p>
+      <div class="div-block">
+        <div class="w-richtext">
+          <h2>Rich Text element?</h2>
+          <p>The rich text element allows you to create and format headings, paragraphs, blockquotes, images, and video all in one place instead of having to add and format them individually. Just double-click and easily create content.</p>
+          <h4>Static and dynamic content editing</h4>
+          <p>A rich text element can be used with static or dynamic content. For static content, just drop it into any page and begin editing. For dynamic content, add a rich text field to any collection and then connect a rich text element to that field in the settings panel. Voila!</p>
+          <h4>How to customize formatting for each rich text</h4>
+          <p>Headings, paragraphs, blockquotes, figures, images, and figure captions can all be styled after a class is added to the rich text element using the &quot;When inside of&quot; nested selector system.</p>
+        </div>
+      </div>
+      <h2>Welcome to the Easter egg Sample Page</h2>
+      <div class="divider grey"></div>
+      <h2 class="h2-smaller">List Item Example Below</h2>
+      <ul role="list">
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <div>
+        <a href="#" class="button w-button">Button Text</a>
+        <a href="#" class="button w-button">Button Text</a>
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="container w-container">
+      <div class="div-block-3">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       </div>
     </div>
   </div>
@@ -50,20 +71,20 @@
       <p>Use these <strong>cards</strong> when you want to display content with an image, such as a blog post or product. They’re built with CSS grid to enable the 3-column layout. When you select the “Cards Grid Container,” you’ll see a red icon on the top right. Click the icon to edit the number of columns, the column gap, and more!</p>
       <p>The card images have <strong>fit</strong> set to <strong>cover</strong>, so they fill their masking container without stretching. Try making the “Cards Image Mask” a circle using <strong>border-radius</strong> or adjusting the size ratio using top <strong>padding</strong>. Don’t forget to set an <strong>alt</strong> description for each image, which will help with accessibility.</p>
       <div class="cards-grid-container">
-        <div id="w-node-_9b2be8c8-d745-afa9-65dc-04d74a3c5fae-e036c02a">
+        <div id="w-node-_6ef0b84e-1094-8597-e83f-ddca204c4495-26b409d5">
           <div class="cards-image-mask"><img src="https://uploads-ssl.webflow.com/5db1c76aadcfe25e881680fa/5db86dc421496616bf357c25_placeholder.svg" alt="" class="cards-image"></div>
           <h3>Card one</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
-        <div id="w-node-_9b2be8c8-d745-afa9-65dc-04d74a3c5fb5-e036c02a">
+        <div id="w-node-_6ef0b84e-1094-8597-e83f-ddca204c449c-26b409d5">
           <div class="cards-image-mask"><img src="https://uploads-ssl.webflow.com/5db1c76aadcfe25e881680fa/5db86dc421496616bf357c25_placeholder.svg" alt="" class="cards-image"></div>
-          <h3 id="w-node-_9b2be8c8-d745-afa9-65dc-04d74a3c5fb8-e036c02a">Card two</h3>
-          <p id="w-node-_9b2be8c8-d745-afa9-65dc-04d74a3c5fba-e036c02a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <h3 id="w-node-_6ef0b84e-1094-8597-e83f-ddca204c449f-26b409d5">Card two</h3>
+          <p id="w-node-_6ef0b84e-1094-8597-e83f-ddca204c44a1-26b409d5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
-        <div id="w-node-_9b2be8c8-d745-afa9-65dc-04d74a3c5fbc-e036c02a">
+        <div id="w-node-_6ef0b84e-1094-8597-e83f-ddca204c44a3-26b409d5">
           <div class="cards-image-mask"><img src="https://uploads-ssl.webflow.com/5db1c76aadcfe25e881680fa/5db86dc421496616bf357c25_placeholder.svg" alt="" class="cards-image"></div>
-          <h3 id="w-node-_9b2be8c8-d745-afa9-65dc-04d74a3c5fbf-e036c02a">Card three</h3>
-          <p id="w-node-_9b2be8c8-d745-afa9-65dc-04d74a3c5fc1-e036c02a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <h3 id="w-node-_6ef0b84e-1094-8597-e83f-ddca204c44a6-26b409d5">Card three</h3>
+          <p id="w-node-_6ef0b84e-1094-8597-e83f-ddca204c44a8-26b409d5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
       </div>
     </div>
