--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-wf-page="6099966d2e7a2c1aad697d4c" data-wf-site="6099966d2e7a2cc80c697d45">
 <head>
   <meta charset="utf-8">
-  <title>Minimal Responsive Website Template | Webflow Templates</title>
+  <title>Evergreen Branch</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="normalize.css" rel="stylesheet" type="text/css">
   <link href="web.css" rel="stylesheet" type="text/css">
